lib/Parser/Par.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.4).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module Parser.Par
  ( happyError
  , myLexer
  , pProgram
  ) where

import Prelude

import qualified Parser.Abs
import Parser.Lex

}

%name pProgram_internal Program
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!'       { PT _ (TS _ 1)  }
  '!='      { PT _ (TS _ 2)  }
  '%'       { PT _ (TS _ 3)  }
  '&&'      { PT _ (TS _ 4)  }
  '('       { PT _ (TS _ 5)  }
  ')'       { PT _ (TS _ 6)  }
  '*'       { PT _ (TS _ 7)  }
  '+'       { PT _ (TS _ 8)  }
  '++'      { PT _ (TS _ 9)  }
  ','       { PT _ (TS _ 10) }
  '-'       { PT _ (TS _ 11) }
  '--'      { PT _ (TS _ 12) }
  '/'       { PT _ (TS _ 13) }
  ';'       { PT _ (TS _ 14) }
  '<'       { PT _ (TS _ 15) }
  '<='      { PT _ (TS _ 16) }
  '='       { PT _ (TS _ 17) }
  '=='      { PT _ (TS _ 18) }
  '>'       { PT _ (TS _ 19) }
  '>='      { PT _ (TS _ 20) }
  'boolean' { PT _ (TS _ 21) }
  'else'    { PT _ (TS _ 22) }
  'false'   { PT _ (TS _ 23) }
  'if'      { PT _ (TS _ 24) }
  'int'     { PT _ (TS _ 25) }
  'return'  { PT _ (TS _ 26) }
  'string'  { PT _ (TS _ 27) }
  'true'    { PT _ (TS _ 28) }
  'void'    { PT _ (TS _ 29) }
  'while'   { PT _ (TS _ 30) }
  '{'       { PT _ (TS _ 31) }
  '||'      { PT _ (TS _ 32) }
  '}'       { PT _ (TS _ 33) }
  L_Ident   { PT _ (TV _)    }
  L_integ   { PT _ (TI _)    }
  L_quoted  { PT _ (TL _)    }

%%

Ident :: { (Parser.Abs.BNFC'Position, Parser.Abs.Ident) }
Ident  : L_Ident { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.Ident (tokenText $1)) }

Integer :: { (Parser.Abs.BNFC'Position, Integer) }
Integer  : L_integ  { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), (read (tokenText $1)) :: Integer) }

String  :: { (Parser.Abs.BNFC'Position, String) }
String   : L_quoted { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), ((\(PT _ (TL s)) -> s) $1)) }

Program :: { (Parser.Abs.BNFC'Position, Parser.Abs.Program) }
Program
  : ListTopDef { (fst $1, Parser.Abs.Program (fst $1) (snd $1)) }

TopDef :: { (Parser.Abs.BNFC'Position, Parser.Abs.TopDef) }
TopDef
  : Type Ident '(' ListArg ')' Block { (fst $1, Parser.Abs.FnDef (fst $1) (snd $1) (snd $2) (snd $4) (snd $6)) }

ListTopDef :: { (Parser.Abs.BNFC'Position, [Parser.Abs.TopDef]) }
ListTopDef
  : TopDef { (fst $1, (:[]) (snd $1)) }
  | TopDef ListTopDef { (fst $1, (:) (snd $1) (snd $2)) }

Arg :: { (Parser.Abs.BNFC'Position, Parser.Abs.Arg) }
Arg
  : Type Ident { (fst $1, Parser.Abs.Arg (fst $1) (snd $1) (snd $2)) }

ListArg :: { (Parser.Abs.BNFC'Position, [Parser.Abs.Arg]) }
ListArg
  : {- empty -} { (Parser.Abs.BNFC'NoPosition, []) }
  | Arg { (fst $1, (:[]) (snd $1)) }
  | Arg ',' ListArg { (fst $1, (:) (snd $1) (snd $3)) }

Block :: { (Parser.Abs.BNFC'Position, Parser.Abs.Block) }
Block
  : '{' ListStmt '}' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.Block (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1)) (snd $2)) }

ListStmt :: { (Parser.Abs.BNFC'Position, [Parser.Abs.Stmt]) }
ListStmt
  : {- empty -} { (Parser.Abs.BNFC'NoPosition, []) }
  | Stmt ListStmt { (fst $1, (:) (snd $1) (snd $2)) }

Stmt :: { (Parser.Abs.BNFC'Position, Parser.Abs.Stmt) }
Stmt
  : ';' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.Empty (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }
  | Block { (fst $1, Parser.Abs.BStmt (fst $1) (snd $1)) }
  | Type ListItem ';' { (fst $1, Parser.Abs.Decl (fst $1) (snd $1) (snd $2)) }
  | Ident '=' Expr ';' { (fst $1, Parser.Abs.Ass (fst $1) (snd $1) (snd $3)) }
  | Ident '++' ';' { (fst $1, Parser.Abs.Incr (fst $1) (snd $1)) }
  | Ident '--' ';' { (fst $1, Parser.Abs.Decr (fst $1) (snd $1)) }
  | 'return' Expr ';' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.Ret (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | 'return' ';' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.VRet (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }
  | 'if' '(' Expr ')' Stmt { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.Cond (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
  | 'if' '(' Expr ')' Stmt 'else' Stmt { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.CondElse (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5) (snd $7)) }
  | 'while' '(' Expr ')' Stmt { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.While (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
  | Expr ';' { (fst $1, Parser.Abs.SExp (fst $1) (snd $1)) }

Item :: { (Parser.Abs.BNFC'Position, Parser.Abs.Item) }
Item
  : Ident { (fst $1, Parser.Abs.NoInit (fst $1) (snd $1)) }
  | Ident '=' Expr { (fst $1, Parser.Abs.Init (fst $1) (snd $1) (snd $3)) }

ListItem :: { (Parser.Abs.BNFC'Position, [Parser.Abs.Item]) }
ListItem
  : Item { (fst $1, (:[]) (snd $1)) }
  | Item ',' ListItem { (fst $1, (:) (snd $1) (snd $3)) }

Type :: { (Parser.Abs.BNFC'Position, Parser.Abs.Type) }
Type
  : 'int' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.Int (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }
  | 'string' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.Str (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }
  | 'boolean' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.Bool (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }
  | 'void' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.Void (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }

ListType :: { (Parser.Abs.BNFC'Position, [Parser.Abs.Type]) }
ListType
  : {- empty -} { (Parser.Abs.BNFC'NoPosition, []) }
  | Type { (fst $1, (:[]) (snd $1)) }
  | Type ',' ListType { (fst $1, (:) (snd $1) (snd $3)) }

Expr6 :: { (Parser.Abs.BNFC'Position, Parser.Abs.Expr) }
Expr6
  : Ident { (fst $1, Parser.Abs.EVar (fst $1) (snd $1)) }
  | Integer { (fst $1, Parser.Abs.ELitInt (fst $1) (snd $1)) }
  | 'true' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.ELitTrue (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }
  | 'false' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.ELitFalse (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }
  | Ident '(' ListExpr ')' { (fst $1, Parser.Abs.EApp (fst $1) (snd $1) (snd $3)) }
  | String { (fst $1, Parser.Abs.EString (fst $1) (snd $1)) }
  | '(' Expr ')' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), (snd $2)) }

Expr5 :: { (Parser.Abs.BNFC'Position, Parser.Abs.Expr) }
Expr5
  : '-' Expr6 { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.Neg (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | '!' Expr6 { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.Not (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | Expr6 { (fst $1, (snd $1)) }

Expr4 :: { (Parser.Abs.BNFC'Position, Parser.Abs.Expr) }
Expr4
  : Expr4 MulOp Expr5 { (fst $1, Parser.Abs.EMul (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr5 { (fst $1, (snd $1)) }

Expr3 :: { (Parser.Abs.BNFC'Position, Parser.Abs.Expr) }
Expr3
  : Expr3 AddOp Expr4 { (fst $1, Parser.Abs.EAdd (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr4 { (fst $1, (snd $1)) }

Expr2 :: { (Parser.Abs.BNFC'Position, Parser.Abs.Expr) }
Expr2
  : Expr2 RelOp Expr3 { (fst $1, Parser.Abs.ERel (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr3 { (fst $1, (snd $1)) }

Expr1 :: { (Parser.Abs.BNFC'Position, Parser.Abs.Expr) }
Expr1
  : Expr2 '&&' Expr1 { (fst $1, Parser.Abs.EAnd (fst $1) (snd $1) (snd $3)) }
  | Expr2 { (fst $1, (snd $1)) }

Expr :: { (Parser.Abs.BNFC'Position, Parser.Abs.Expr) }
Expr
  : Expr1 '||' Expr { (fst $1, Parser.Abs.EOr (fst $1) (snd $1) (snd $3)) }
  | Expr1 { (fst $1, (snd $1)) }

ListExpr :: { (Parser.Abs.BNFC'Position, [Parser.Abs.Expr]) }
ListExpr
  : {- empty -} { (Parser.Abs.BNFC'NoPosition, []) }
  | Expr { (fst $1, (:[]) (snd $1)) }
  | Expr ',' ListExpr { (fst $1, (:) (snd $1) (snd $3)) }

AddOp :: { (Parser.Abs.BNFC'Position, Parser.Abs.AddOp) }
AddOp
  : '+' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.Plus (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }
  | '-' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.Minus (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }

MulOp :: { (Parser.Abs.BNFC'Position, Parser.Abs.MulOp) }
MulOp
  : '*' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.Times (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }
  | '/' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.Div (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }
  | '%' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.Mod (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }

RelOp :: { (Parser.Abs.BNFC'Position, Parser.Abs.RelOp) }
RelOp
  : '<' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.LTH (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }
  | '<=' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.LE (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }
  | '>' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.GTH (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }
  | '>=' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.GE (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }
  | '==' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.EQU (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }
  | '!=' { (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1), Parser.Abs.NE (uncurry Parser.Abs.BNFC'Position (tokenLineCol $1))) }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

-- Entrypoints

pProgram :: [Token] -> Err Parser.Abs.Program
pProgram = fmap snd . pProgram_internal
}
