src/Parser/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Parser/Par.y
-----------------------------------------------------------------------------

state 35 contains 2 reduce/reduce conflicts.
state 110 contains 1 shift/reduce conflicts.

rule 9 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListArg ')' Block         (5)
	TopDef -> Type Ident '=' Expr ';'                  (6)
	ListTopDef -> TopDef                               (7)
	ListTopDef -> TopDef ListTopDef                    (8)
	Arg -> Type Ident                                  (9)
	Arg -> Type Ident                                  (10)
	ListArg ->                                         (11)
	ListArg -> Arg                                     (12)
	ListArg -> Arg ',' ListArg                         (13)
	Block -> '{' ListStmt '}'                          (14)
	ListStmt ->                                        (15)
	ListStmt -> Stmt ListStmt                          (16)
	Stmt -> ';'                                        (17)
	Stmt -> Block                                      (18)
	Stmt -> Type ListItem ';'                          (19)
	Stmt -> TopDef                                     (20)
	Stmt -> Ident '=' Expr ';'                         (21)
	Stmt -> Ident '++' ';'                             (22)
	Stmt -> Ident '--' ';'                             (23)
	Stmt -> 'return' Expr ';'                          (24)
	Stmt -> 'return' ';'                               (25)
	Stmt -> 'if' '(' Expr ')' Stmt                     (26)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (27)
	Stmt -> 'while' '(' Expr ')' Stmt                  (28)
	Stmt -> Expr ';'                                   (29)
	Item -> Ident                                      (30)
	ListItem -> Item                                   (31)
	ListItem -> Item ',' ListItem                      (32)
	Type -> 'int'                                      (33)
	Type -> 'string'                                   (34)
	Type -> 'boolean'                                  (35)
	Type -> 'void'                                     (36)
	Expr6 -> Ident                                     (37)
	Expr6 -> Integer                                   (38)
	Expr6 -> 'true'                                    (39)
	Expr6 -> 'false'                                   (40)
	Expr6 -> Ident '(' ListExpr ')'                    (41)
	Expr6 -> String                                    (42)
	Expr6 -> '(' Expr ')'                              (43)
	Expr5 -> '-' Expr6                                 (44)
	Expr5 -> '!' Expr6                                 (45)
	Expr5 -> Expr6                                     (46)
	Expr4 -> Expr4 MulOp Expr5                         (47)
	Expr4 -> Expr5                                     (48)
	Expr3 -> Expr3 AddOp Expr4                         (49)
	Expr3 -> Expr4                                     (50)
	Expr2 -> Expr2 RelOp Expr3                         (51)
	Expr2 -> Expr3                                     (52)
	Expr1 -> Expr2 '&&' Expr1                          (53)
	Expr1 -> Expr2                                     (54)
	Expr -> Expr1 '||' Expr                            (55)
	Expr -> Expr1                                      (56)
	ListExpr ->                                        (57)
	ListExpr -> Expr                                   (58)
	ListExpr -> Expr ',' ListExpr                      (59)
	AddOp -> '+'                                       (60)
	AddOp -> '-'                                       (61)
	MulOp -> '*'                                       (62)
	MulOp -> '/'                                       (63)
	MulOp -> '%'                                       (64)
	RelOp -> '<'                                       (65)
	RelOp -> '<='                                      (66)
	RelOp -> '>'                                       (67)
	RelOp -> '>='                                      (68)
	RelOp -> '=='                                      (69)
	RelOp -> '!='                                      (70)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'/'            { PT _ (TS _ 13) }
	';'            { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<='           { PT _ (TS _ 16) }
	'='            { PT _ (TS _ 17) }
	'=='           { PT _ (TS _ 18) }
	'>'            { PT _ (TS _ 19) }
	'>='           { PT _ (TS _ 20) }
	'boolean'      { PT _ (TS _ 21) }
	'else'         { PT _ (TS _ 22) }
	'false'        { PT _ (TS _ 23) }
	'if'           { PT _ (TS _ 24) }
	'int'          { PT _ (TS _ 25) }
	'return'       { PT _ (TS _ 26) }
	'string'       { PT _ (TS _ 27) }
	'true'         { PT _ (TS _ 28) }
	'void'         { PT _ (TS _ 29) }
	'while'        { PT _ (TS _ 30) }
	'{'            { PT _ (TS _ 31) }
	'||'           { PT _ (TS _ 32) }
	'}'            { PT _ (TS _ 33) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rules 5, 6
	ListTopDef      rules 7, 8
	Arg             rules 9, 10
	ListArg         rules 11, 12, 13
	Block           rule  14
	ListStmt        rules 15, 16
	Stmt            rules 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29
	Item            rule  30
	ListItem        rules 31, 32
	Type            rules 33, 34, 35, 36
	Expr6           rules 37, 38, 39, 40, 41, 42, 43
	Expr5           rules 44, 45, 46
	Expr4           rules 47, 48
	Expr3           rules 49, 50
	Expr2           rules 51, 52
	Expr1           rules 53, 54
	Expr            rules 55, 56
	ListExpr        rules 57, 58, 59
	AddOp           rules 60, 61
	MulOp           rules 62, 63, 64
	RelOp           rules 65, 66, 67, 68, 69, 70

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Program        goto state 3
	TopDef         goto state 4
	ListTopDef     goto state 5
	Type           goto state 6

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	ListTopDef -> TopDef .                              (rule 7)
	ListTopDef -> TopDef . ListTopDef                   (rule 8)

	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10
	%eof           reduce using rule 7

	TopDef         goto state 4
	ListTopDef     goto state 12
	Type           goto state 6

State 5

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 6

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)
	TopDef -> Type . Ident '=' Expr ';'                 (rule 6)

	L_Ident        shift, and enter state 2

	Ident          goto state 11

State 7

	Type -> 'boolean' .                                 (rule 35)

	L_Ident        reduce using rule 35


State 8

	Type -> 'int' .                                     (rule 33)

	L_Ident        reduce using rule 33


State 9

	Type -> 'string' .                                  (rule 34)

	L_Ident        reduce using rule 34


State 10

	Type -> 'void' .                                    (rule 36)

	L_Ident        reduce using rule 36


State 11

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 5)
	TopDef -> Type Ident . '=' Expr ';'                 (rule 6)

	'('            shift, and enter state 13
	'='            shift, and enter state 14


State 12

	ListTopDef -> TopDef ListTopDef .                   (rule 8)

	%eof           reduce using rule 8


State 13

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	')'            reduce using rule 11
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Arg            goto state 32
	ListArg        goto state 33
	Type           goto state 34

State 14

	TopDef -> Type Ident '=' . Expr ';'                 (rule 6)

	'!'            shift, and enter state 25
	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'false'        shift, and enter state 28
	'true'         shift, and enter state 29
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31

	Ident          goto state 15
	Integer        goto state 16
	String         goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Expr           goto state 24

State 15

	Expr6 -> Ident .                                    (rule 37)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 41)

	'!='           reduce using rule 37
	'%'            reduce using rule 37
	'&&'           reduce using rule 37
	'('            shift, and enter state 58
	')'            reduce using rule 37
	'*'            reduce using rule 37
	'+'            reduce using rule 37
	','            reduce using rule 37
	'-'            reduce using rule 37
	'/'            reduce using rule 37
	';'            reduce using rule 37
	'<'            reduce using rule 37
	'<='           reduce using rule 37
	'=='           reduce using rule 37
	'>'            reduce using rule 37
	'>='           reduce using rule 37
	'||'           reduce using rule 37


State 16

	Expr6 -> Integer .                                  (rule 38)

	'!='           reduce using rule 38
	'%'            reduce using rule 38
	'&&'           reduce using rule 38
	')'            reduce using rule 38
	'*'            reduce using rule 38
	'+'            reduce using rule 38
	','            reduce using rule 38
	'-'            reduce using rule 38
	'/'            reduce using rule 38
	';'            reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'=='           reduce using rule 38
	'>'            reduce using rule 38
	'>='           reduce using rule 38
	'||'           reduce using rule 38


State 17

	Expr6 -> String .                                   (rule 42)

	'!='           reduce using rule 42
	'%'            reduce using rule 42
	'&&'           reduce using rule 42
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'/'            reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'||'           reduce using rule 42


State 18

	Expr5 -> Expr6 .                                    (rule 46)

	'!='           reduce using rule 46
	'%'            reduce using rule 46
	'&&'           reduce using rule 46
	')'            reduce using rule 46
	'*'            reduce using rule 46
	'+'            reduce using rule 46
	','            reduce using rule 46
	'-'            reduce using rule 46
	'/'            reduce using rule 46
	';'            reduce using rule 46
	'<'            reduce using rule 46
	'<='           reduce using rule 46
	'=='           reduce using rule 46
	'>'            reduce using rule 46
	'>='           reduce using rule 46
	'||'           reduce using rule 46


State 19

	Expr4 -> Expr5 .                                    (rule 48)

	'!='           reduce using rule 48
	'%'            reduce using rule 48
	'&&'           reduce using rule 48
	')'            reduce using rule 48
	'*'            reduce using rule 48
	'+'            reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'/'            reduce using rule 48
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'=='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	'||'           reduce using rule 48


State 20

	Expr4 -> Expr4 . MulOp Expr5                        (rule 47)
	Expr3 -> Expr4 .                                    (rule 50)

	'!='           reduce using rule 50
	'%'            shift, and enter state 55
	'&&'           reduce using rule 50
	')'            reduce using rule 50
	'*'            shift, and enter state 56
	'+'            reduce using rule 50
	','            reduce using rule 50
	'-'            reduce using rule 50
	'/'            shift, and enter state 57
	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	'||'           reduce using rule 50

	MulOp          goto state 54

State 21

	Expr3 -> Expr3 . AddOp Expr4                        (rule 49)
	Expr2 -> Expr3 .                                    (rule 52)

	'!='           reduce using rule 52
	'&&'           reduce using rule 52
	')'            reduce using rule 52
	'+'            shift, and enter state 52
	','            reduce using rule 52
	'-'            shift, and enter state 53
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	'||'           reduce using rule 52

	AddOp          goto state 51

State 22

	Expr2 -> Expr2 . RelOp Expr3                        (rule 51)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 53)
	Expr1 -> Expr2 .                                    (rule 54)

	'!='           shift, and enter state 44
	'&&'           shift, and enter state 45
	')'            reduce using rule 54
	','            reduce using rule 54
	';'            reduce using rule 54
	'<'            shift, and enter state 46
	'<='           shift, and enter state 47
	'=='           shift, and enter state 48
	'>'            shift, and enter state 49
	'>='           shift, and enter state 50
	'||'           reduce using rule 54

	RelOp          goto state 43

State 23

	Expr -> Expr1 . '||' Expr                           (rule 55)
	Expr -> Expr1 .                                     (rule 56)

	')'            reduce using rule 56
	','            reduce using rule 56
	';'            reduce using rule 56
	'||'           shift, and enter state 42


State 24

	TopDef -> Type Ident '=' Expr . ';'                 (rule 6)

	';'            shift, and enter state 41


State 25

	Expr5 -> '!' . Expr6                                (rule 45)

	'('            shift, and enter state 26
	'false'        shift, and enter state 28
	'true'         shift, and enter state 29
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31

	Ident          goto state 15
	Integer        goto state 16
	String         goto state 17
	Expr6          goto state 40

State 26

	Expr6 -> '(' . Expr ')'                             (rule 43)

	'!'            shift, and enter state 25
	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'false'        shift, and enter state 28
	'true'         shift, and enter state 29
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31

	Ident          goto state 15
	Integer        goto state 16
	String         goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Expr           goto state 39

State 27

	Expr5 -> '-' . Expr6                                (rule 44)

	'('            shift, and enter state 26
	'false'        shift, and enter state 28
	'true'         shift, and enter state 29
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 30
	L_quoted       shift, and enter state 31

	Ident          goto state 15
	Integer        goto state 16
	String         goto state 17
	Expr6          goto state 38

State 28

	Expr6 -> 'false' .                                  (rule 40)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	'&&'           reduce using rule 40
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'/'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'||'           reduce using rule 40


State 29

	Expr6 -> 'true' .                                   (rule 39)

	'!='           reduce using rule 39
	'%'            reduce using rule 39
	'&&'           reduce using rule 39
	')'            reduce using rule 39
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	','            reduce using rule 39
	'-'            reduce using rule 39
	'/'            reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'||'           reduce using rule 39


State 30

	Integer -> L_integ .                                (rule 2)

	'!='           reduce using rule 2
	'%'            reduce using rule 2
	'&&'           reduce using rule 2
	')'            reduce using rule 2
	'*'            reduce using rule 2
	'+'            reduce using rule 2
	','            reduce using rule 2
	'-'            reduce using rule 2
	'/'            reduce using rule 2
	';'            reduce using rule 2
	'<'            reduce using rule 2
	'<='           reduce using rule 2
	'=='           reduce using rule 2
	'>'            reduce using rule 2
	'>='           reduce using rule 2
	'||'           reduce using rule 2


State 31

	String -> L_quoted .                                (rule 3)

	'!='           reduce using rule 3
	'%'            reduce using rule 3
	'&&'           reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	','            reduce using rule 3
	'-'            reduce using rule 3
	'/'            reduce using rule 3
	';'            reduce using rule 3
	'<'            reduce using rule 3
	'<='           reduce using rule 3
	'=='           reduce using rule 3
	'>'            reduce using rule 3
	'>='           reduce using rule 3
	'||'           reduce using rule 3


State 32

	ListArg -> Arg .                                    (rule 12)
	ListArg -> Arg . ',' ListArg                        (rule 13)

	')'            reduce using rule 12
	','            shift, and enter state 37


State 33

	TopDef -> Type Ident '(' ListArg . ')' Block        (rule 5)

	')'            shift, and enter state 36


State 34

	Arg -> Type . Ident                                 (rule 9)
	Arg -> Type . Ident                                 (rule 10)

	L_Ident        shift, and enter state 2

	Ident          goto state 35

State 35
